[project]
name = "odoo-addons-oca-product-attribute"
version = "18.0.20250307.0"
dependencies = [
    "odoo-addon-product_assortment==18.0.*",
    "odoo-addon-product_attachment_zipped_download==18.0.*",
    "odoo-addon-product_attribute_archive==18.0.*",
    "odoo-addon-product_attribute_value_avoid_auto_fill==18.0.*",
    "odoo-addon-product_barcode_required==18.0.*",
    "odoo-addon-product_category_active==18.0.*",
    "odoo-addon-product_category_code==18.0.*",
    "odoo-addon-product_code_unique==18.0.*",
    "odoo-addon-product_cost_security==18.0.*",
    "odoo-addon-product_customerinfo==18.0.*",
    "odoo-addon-product_dimension==18.0.*",
    "odoo-addon-product_logistics_uom==18.0.*",
    "odoo-addon-product_main_supplierinfo==18.0.*",
    "odoo-addon-product_manufacturer==18.0.*",
    "odoo-addon-product_medical==18.0.*",
    "odoo-addon-product_net_weight==18.0.*",
    "odoo-addon-product_packaging_dimension==18.0.*",
    "odoo-addon-product_packaging_level==18.0.*",
    "odoo-addon-product_pricelist_alternative==18.0.*",
    "odoo-addon-product_pricelist_by_contact==18.0.*",
    "odoo-addon-product_pricelist_fixed_currency_rate==18.0.*",
    "odoo-addon-product_pricelist_supplierinfo==18.0.*",
    "odoo-addon-product_print_category==18.0.*",
    "odoo-addon-product_sale_manufactured_for==18.0.*",
    "odoo-addon-product_secondary_unit==18.0.*",
    "odoo-addon-product_sequence==18.0.*",
    "odoo-addon-product_set==18.0.*",
    "odoo-addon-product_state==18.0.*",
    "odoo-addon-product_state_sale==18.0.*",
    "odoo-addon-product_state_stock_base==18.0.*",
    "odoo-addon-product_status==18.0.*",
    "odoo-addon-product_stock_state==18.0.*",
    "odoo-addon-product_supplierinfo_archive==18.0.*",
    "odoo-addon-product_supplierinfo_revision==18.0.*",
    "odoo-addon-product_tags_code==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
